--- a/WellVet_v2/Views/Posts/Index.cshtml
+++ b/WellVet_v2/Views/Posts/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 Tarih
             </th>
+            <th>
+                İşlem
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -33,6 +36,20 @@
                 <td>
                     @item.CreatedAt.ToString("yyyy-MM-dd HH:mm")
                 </td>
+                <td>
+                    <tr>
+                        
+                            @if( item.User.UserTypeId == 5){
+                    <td>
+                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+                                Yorum Ekle
+                            </button>
+                    </td>
+                            } 
+                           
+                       
+                    </tr>
+                </td>
             </tr>
         }
     </tbody>
@@ -41,3 +58,25 @@
 <div>
     <a asp-action="Create">Yeni Gönderi Oluştur</a>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+
+</script>
